# five-bot

./: docker-compose.override.yml  docker-compose.yml  pyproject.toml  tailwind.config.js
backend/: Dockerfile  alembic.ini  manifest-example.json  pyproject.toml
backend/app/: backend_pre_start.py  initial_data.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: manifest.py  settings.py  task_types.py  tasks.py  user_tasks.py  users.py
backend/app/core/: config.py  db.py
backend/app/crud/: setting.py  settings.py  task.py  task_type.py  user.py  user_task.py
backend/app/database/: base.py
backend/app/utils/: logger.py
backend/scripts/: prestart.sh
bot/: Dockerfile  bot.py  config.py  main.py  pyproject.toml
bot/handlers/: admin.py  db.py  filters.py  markups.py  states.py  user.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: request.ts
frontend/src/assets/: fonts.css
frontend/src/components/: App.tsx  FiveBot.tsx
frontend/src/components/BurgerMenu/: BurgerMenu.module.css  BurgerMenu.module.css.map  BurgerMenu.module.scss  BurgerMenu.tsx
frontend/src/components/Button/: Button.module.css  Button.module.css.map  Button.module.scss  Button.tsx
frontend/src/components/Loader/: Loader.module.css  Loader.module.css.map  Loader.module.scss  Loader.tsx
frontend/src/components/TaskCard/: TaskCard.tsx  (+3 more)
frontend/src/interfaces/: FiveBotProps.ts  User.ts
frontend/src/services/: userService.ts
(+29 files in other folders)
