[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "alembic>=1.13.3",
    "apscheduler>=3.10.4",
    "asyncpg>=0.30.0",
    "fastapi[standard,standart]>=0.115.4",
    "greenlet>=3.1.1",
    "psycopg-binary>=3.2.3",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    "uvicorn>=0.32.0",
]
